Make notie working

--- a/config.ini
+++ b/config.ini
@@ -3,5 +3,5 @@ DataLocation = ~/records/notie/
 
 [email]
 InboxLocation = ~/records/mail/
-FeedLocation = feed/email/
-BlacklistFile = email/blacklist
+FeedLocation = feed/mail/
+BlacklistFile = mail/blacklist
